# snack

./: Cargo.toml  README.md
src/: app.rs  main.rs  message.rs  subscription.rs  update.rs
src/omemo/: crypto.rs  identity.rs  mod.rs  protocol.rs  ratchet.rs  session.rs  signal_message.rs  store.rs  x3dh.rs
src/room/: backlog.rs  chat.rs  message.rs  mod.rs
src/storage/: history.rs  mod.rs
src/ui/: chat.rs  sidebar.rs  style.rs
src/xmpp/: mod.rs
