[workspace]
members = ["vendor/libxmpp"]

[package]
name = "snack"
version = "0.1.0"
edition = "2024"

[dependencies]
libxmpp = { path = "vendor/libxmpp" }
iced = "0.14.0"
tokio = { version = "1.52.1", features = ["full"] }
chrono = "0.4.44"
log = "0.4.29"
env_logger = "0.11.9"
open = "5"
keyring-core = "1"
directories = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# OMEMO crypto
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = "4"
ed25519-dalek = "2"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
aes = "0.8"
cbc = "0.1"
rand = "0.8"
rand_core = "0.6"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
thiserror = "2"
serde_bytes = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = { version = "1", features = ["rt-async-io-crypto-rust"] }
